syntax = "proto3";
package mc.jabber.proto;

import "mc/jabber/proto/cardinalDataBuffer.proto";
import "mc/jabber/proto/circuitBoardBuffer.proto";

message CircuitManager {
  enum Type {
    COMPUTE = 0;
  }

  Type type = 1;
  CircuitBoard board = 2;
  map<int32, bytes> chipData = 3;
  map<int32, CardinalData> state = 4;
}
